@@ -1,5 +1,4 @@
 <?php
-  //$p = $WikiTheme->tooltipAccessKeyPrefix();
   $dbh = $request->getDbh();
   $isAdmin = $user->isAdmin();
   $pagename = $page->getName();
