@@ -1,7 +1,6 @@
 <?php
 // With MonoBook it is similar to Sidebar, named boxes at the left.
 // actionbuttons, navigation, search, toolbox
-$p = $WikiTheme->tooltipAccessKeyPrefix();
 ?>
 <!-- The left navigation/search bar -->
 <!-- Here you should add favorite Links and Categories -->
@@ -39,13 +38,13 @@ $p = $WikiTheme->tooltipAccessKeyPrefix();
       <h2><?php echo _("Toolbox") ?><?php echo $WikiTheme->folderArrow('p-tb', 'Open') ?></h2>
   <div class="pBody" id="p-tb-body">
     <ul>
-    <li><?php $link = WikiLink(_("RecentChanges"), "",_("RecentChanges")); $link->setAttr("accesskey","r"); $link->addTooltip(_("The list of recent changes in the wiki.")." [$p-r]"); ?><?php echo $link ?> </li>
+    <li><?php $link = WikiLink(_("RecentChanges"), "",_("RecentChanges")); $link->addTooltip(_("The list of recent changes in the wiki.")); ?><?php echo $link ?> </li>
     <li><?php echo WikiLink(_("RecentNewPages")) ?></li>
     <?php if (!empty($revision)) { ?>
       <li id="t-whatlinkshere"><?php echo Button(array('action'=>_("BackLinks")), _("What links here"), $page->getName()) ?></li>
     <?php } ?>
     <?php if (!empty($user) && $user->isSignedIn()) { ?>
-      <li><?php $link = WikiLink(_("UpLoad"),"",_("Upload File")); $link->setAttr("accesskey","u"); $link->addTooltip(_("Upload images or media files")." [$p-u]"); ?><?php echo $link ?></li>
+      <li><?php $link = WikiLink(_("UpLoad"),"",_("Upload File")); $link->addTooltip(_("Upload images or media files")); ?><?php echo $link ?></li>
       <li><?php echo WikiLink(_("UserPreferences"), "",_("Preferences")) ?></li>
     <?php } ?>
       <?php $PrintableLink = $WikiTheme->makeButton(_("Printable version"), "javascript:PrinterStylesheet();", 'wikiaction'); ?>
